chore: Migration to Java 21 for benchmark project, ref: NOISSUE