@@ -13,13 +13,10 @@
  */
 package io.openmessaging.benchmark.driver;
 
-import static java.util.stream.Collectors.toList;
-
 import java.io.File;
 import java.io.IOException;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
-import lombok.Value;
 import org.apache.bookkeeper.stats.StatsLogger;
 
 /** Base driver interface. */
@@ -30,9 +27,10 @@ public interface BenchmarkDriver extends AutoCloseable {
      *
      * <p>The format of the configuration file is specific to the driver implementation.
      *
-     * @param configurationFile
+     * @param configurationFile the configuration file
      * @param statsLogger stats logger to collect stats from benchmark driver
-     * @throws IOException
+     * @throws IOException if configuration file cannot be read
+     * @throws InterruptedException if initialization is interrupted
      */
     void initialize(File configurationFile, StatsLogger statsLogger)
             throws IOException, InterruptedException;
@@ -47,46 +45,45 @@ public interface BenchmarkDriver extends AutoCloseable {
     /**
      * Create a new topic with a given number of partitions.
      *
-     * @param topic
-     * @param partitions
-     * @return a future the completes when the topic is created
+     * @param topic the topic name
+     * @param partitions the number of partitions
+     * @return a future that completes when the topic is created
      */
     CompletableFuture<Void> createTopic(String topic, int partitions);
 
     /**
      * Create a list of new topics with the given number of partitions.
      *
-     * @param topicInfos
-     * @return a future the completes when the topics are created
+     * @param topicInfos the list of topics to create
+     * @return a future that completes when the topics are created
      */
     default CompletableFuture<Void> createTopics(List<TopicInfo> topicInfos) {
-        @SuppressWarnings("unchecked")
-        CompletableFuture<Void>[] futures =
+        return CompletableFuture.allOf(
                 topicInfos.stream()
-                        .map(topicInfo -> createTopic(topicInfo.getTopic(), topicInfo.getPartitions()))
-                        .toArray(CompletableFuture[]::new);
-        return CompletableFuture.allOf(futures);
+                        .map(topicInfo -> createTopic(topicInfo.topic(), topicInfo.partitions()))
+                        .toArray(CompletableFuture[]::new));
     }
 
     /**
      * Create a producer for a given topic.
      *
-     * @param topic
+     * @param topic the topic name
      * @return a producer future
      */
     CompletableFuture<BenchmarkProducer> createProducer(String topic);
 
     /**
-     * Create a producers for a given topic.
+     * Create producers for given topics.
      *
-     * @param producers
+     * @param producers the list of producers to create
      * @return a producers future
      */
     default CompletableFuture<List<BenchmarkProducer>> createProducers(List<ProducerInfo> producers) {
         List<CompletableFuture<BenchmarkProducer>> futures =
-                producers.stream().map(ci -> createProducer(ci.getTopic())).collect(toList());
+                producers.stream().map(producerInfo -> createProducer(producerInfo.topic())).toList();
+
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
-                .thenApply(v -> futures.stream().map(CompletableFuture::join).collect(toList()));
+                .thenApply(v -> futures.stream().map(CompletableFuture::join).toList());
     }
 
     /**
@@ -95,49 +92,59 @@ public interface BenchmarkDriver extends AutoCloseable {
      * <p>It is responsibility of the driver implementation to invoke the <code>consumerCallback
      * </code> each time a message is received.
      *
-     * @param topic
-     * @param subscriptionName
-     * @param consumerCallback
+     * @param topic the topic name
+     * @param subscriptionName the subscription name
+     * @param consumerCallback the callback to invoke when messages are received
      * @return a consumer future
      */
     CompletableFuture<BenchmarkConsumer> createConsumer(
             String topic, String subscriptionName, ConsumerCallback consumerCallback);
 
     /**
-     * Create a consumers for a given topic.
+     * Create consumers for given topics.
      *
-     * @param consumers
+     * @param consumers the list of consumers to create
      * @return a consumers future
      */
     default CompletableFuture<List<BenchmarkConsumer>> createConsumers(List<ConsumerInfo> consumers) {
         List<CompletableFuture<BenchmarkConsumer>> futures =
                 consumers.stream()
                         .map(
-                                ci ->
+                                consumerInfo ->
                                         createConsumer(
-                                                ci.getTopic(), ci.getSubscriptionName(), ci.getConsumerCallback()))
-                        .collect(toList());
+                                                consumerInfo.topic(),
+                                                consumerInfo.subscriptionName(),
+                                                consumerInfo.consumerCallback()))
+                        .toList();
+
         return CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
-                .thenApply(v -> futures.stream().map(CompletableFuture::join).collect(toList()));
+                .thenApply(v -> futures.stream().map(CompletableFuture::join).toList());
     }
 
-    @Value
-    class TopicInfo {
-        String topic;
-        int partitions;
-    }
+    /**
+     * Topic information record containing topic name and partition count.
+     *
+     * @param topic the topic name
+     * @param partitions the number of partitions
+     */
+    record TopicInfo(String topic, int partitions) {}
 
-    @Value
-    class ProducerInfo {
-        int id;
-        String topic;
-    }
+    /**
+     * Producer information record containing producer ID and topic.
+     *
+     * @param id the producer ID
+     * @param topic the topic name
+     */
+    record ProducerInfo(int id, String topic) {}
 
-    @Value
-    class ConsumerInfo {
-        int id;
-        String topic;
-        String subscriptionName;
-        ConsumerCallback consumerCallback;
-    }
+    /**
+     * Consumer information record containing consumer details.
+     *
+     * @param id the consumer ID
+     * @param topic the topic name
+     * @param subscriptionName the subscription name
+     * @param consumerCallback the callback to invoke when messages are received
+     */
+    record ConsumerInfo(
+            int id, String topic, String subscriptionName, ConsumerCallback consumerCallback) {}
 }
